--- a/cp5prototype.css
+++ b/cp5prototype.css
@@ -1,6 +1,6 @@
 /*#CSS styles for Challange Problem 5 by John Schmitt*/
 body {
-  background-color: #FFFFFF;
+  background-color: #b2ad7f;
   color: #04415A;
   margin: 0;
 }
